--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="./js/zaznam.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/obsluha.js"></script>
+    <script src="./js/footerYear.js"></script>
     
 </body>
 
