--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
     <title>Aplikace pojistných událostí</title>
 </head>
 <body>
+    <div class="scrolling-container">
         <nav class="navbar navbar-dark">
             <img src="./src/logojv.png" alt="Logo" class="navbar-logo">
             <span class="navbar-text">
                 Evidence pojištěnců
             </span>
+            <a href="./omne.html">
+                <button id="button" class="navbar-text">O mně</button>
+            </a>
+            
          </nav>
 
         <section id="addInsured" class="section">
             <header>
                 <h1>Přidej Pojištence</h1>
             </header>
-            <form onsubmit="pridatZaznam(event)">
+            <form onsubmit="pridatZaznam(e)">
                 <div class="row">
                     <div class="col">
                         <label for="jmeno">Jméno</label>
@@ -42,8 +47,8 @@
                         <input type="number" id="telefon" class="form-control" placeholder="Vyplňte telefon">
                     </div>
                     <div class="col">
-                        <label for="vek">Věk</label>
-                        <input type="number" id="vek" class="form-control" placeholder="Vyplňte věk">
+                        <label for="vek">Datum Narození</label>
+                        <input type="date" id="datumNarozeni" class="form-control" placeholder="Vyplňte datum narození">
                     </div>
                 </div>
                 <div class="mt-3 text-center">
@@ -53,7 +58,7 @@
 
             <div class="container mt-3 ">
                 <h2 class="mb-3 text-center">Tabulka zadaných pojištěnců</h2>
-                <table class="table table-striped table-blue text-center" border="1">
+                <table class="table table-striped table-blue text-center">
                     <thead>
                         <tr>
                             <th scope="col">Jméno a přijmení</th>
@@ -68,13 +73,12 @@
                 </table>
             </div>
 
+
         </section>
-    
-  
-            </main>
-            <footer>
-                &copy; <span id="year"></span> Jan Vlasák. Všechna práva vyhrazena.
-            </footer> 
+        </main>
+        <footer>
+            &copy; <span id="year"></span> Jan Vlasák. Všechna práva vyhrazena.
+        </footer> 
     </div>
     <script src="./js/zaznam.js"></script>
     <script src="./js/script.js"></script>
